sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:16: error: value downto is not a member of Int
		for (i<-fin downto debut) {
                            ^