sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var b=true;
	val l=getNombreValeurs() ;
	var debut=0;
	var fin = l-2;
	while (b) {
		b=false;
		for (i<-debut to fin) {
			if (plusPetit(i+1,i)) {
				echange(i,i+1);
				b=true;
			}
		}
		fin-=1;
		for (i<-fin downto debut) {
			if (plusPetit(i+1,i)) {
				echange(i,i+1);
				b=true;
			}
		}
		debut+=1;
	}
}
